Increase z-index of fixed element

--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ button:active {
   bottom: 20px;
   right: 20px;
   max-width: 280px;
-  z-index: 9999;
+  z-index: 999999;
 }
 
 .hint-card {
